tests/baselines/reference/VariableDeclaration6_es6.errors.txt
tests/cases/conformance/es6/variableDeclarations/VariableDeclaration6_es6.ts(1,1): error TS2552: Cannot find name 'let'. Did you mean 'Set'?


==== tests/cases/conformance/es6/variableDeclarations/VariableDeclaration6_es6.ts (1 errors) ====
    let
    ~~~
!!! error TS2552: Cannot find name 'let'. Did you mean 'Set'?